<resources>
    <string name="app_name">QuizApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Lorem ipsum</string>
    <string name="long_test">Lorem ipsum dolor sit amet</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in_with_google">Log in with Google</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>

    <string name="no_quizzes_added">No quizzes added</string>
    <string name="quiz_id">Quiz ID: %1$s</string>
    <string name="question_count">%1$s question(s)</string>
    <string name="join_quiz">Join Quiz</string>
    <string name="enter_quiz_id">Enter quiz ID</string>
    <string name="join">Join</string>

    <string name="add_quiz">Add Quiz</string>
    <string name="edit_quiz">Edit Quiz</string>
    <string name="quiz_title">Quiz title</string>
    <string name="time_per_question">Time per question (s)</string>
    <string name="import_questions">Import questions (.csv)</string>
    <string name="save">Save</string>

    <string name="quiz_details">Quiz Details</string>
    <string name="id">ID: %1$s</string>
    <string name="title">Title: %1$s</string>
    <string name="questions">Questions: %1$s</string>
    <string name="time_per_question2">Time per question: %1$s seconds</string>
    <string name="start_quiz">Start Quiz</string>

    <string name="question_x_of_y">Question %1$s of %2$s</string>
    <string name="next">Next</string>

    <string name="results">Results</string>
    <string name="score">Score: %1$s / %2$s</string>
    <string name="end_quiz">End Quiz</string>
</resources>