<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llSession"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/xl"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.takeQuiz.session.QuizSessionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvQuestionCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="18sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/l"
        android:backgroundTint="@color/purple50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/l"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_test"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/m"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbOption0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test" />

                <RadioButton
                    android:id="@+id/rbOption1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test" />

                <RadioButton
                    android:id="@+id/rbOption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test" />

                <RadioButton
                    android:id="@+id/rbOption3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/next" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>